fix hero section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,27 +13,36 @@ Font color (Black): 000000;
 body {
     background-color: #ffffff;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px; /* sets the font size to 16px */
-    font-weight: 400; /* sets font weight to 400 */
-    line-height: 1.6; /* sets the line-height to 1.6 * the font-size */
+    font-size: 16px;
+    /* sets the font size to 16px */
+    font-weight: 400;
+    /* sets font weight to 400 */
+    line-height: 1.6;
+    /* sets the line-height to 1.6 * the font-size */
     color: #000000;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     line-height: 1.4;
 }
+
 h1 {
-    font-size: 2.75em;
+    font-size: 2.25;
     font-weight: 700;
 }
+
 h2 {
     font-size: 2.25em;
     font-weight: 700;
 }
+
 h3 {
     font-size: 1.75em;
     font-weight: 600;
 }
+
 p {
     font-size: 1.25em;
     font-weight: 400;
@@ -45,18 +54,24 @@ img {
 
 a {
     color: #017CC1;
-    text-decoration: none; /* no underlining */
+    text-decoration: none;
+    /* no underlining */
 }
+
 a:hover {
     color: #cc6540;
-    text-decoration: underline; /* underlining when hovering over link */
+    text-decoration: underline;
+    /* underlining when hovering over link */
 }
+
 a:hover,
 a:focus {
     color: #cc6540;
     text-decoration: underline;
 }
-a:active { /* selected link */
+
+a:active {
+    /* selected link */
     color: #994c30;
 }
 
@@ -64,28 +79,31 @@ a:active { /* selected link */
     display: inline-block;
     background-color: #017CC1;
     color: #ffffff;
-    font-weight: 400;
+    font-weight: 600;
     padding: 10px;
     border-radius: 2px;
     border-bottom: 2px solid #00507C;
     transition: 0.2s opacity;
 }
+
 .button:hover {
     opacity: 0.8;
     text-decoration: none;
 }
+
 .button.contact {
     background-color: transparent;
     color: #017CC1;
     text-transform: uppercase;
     border: 2px solid #017CC1;
 }
+
 .button.contact:hover {
     background-color: #017CC1;
     color: #ffffff;
 }
 
-header{
+header {
     background-color: #cccccc;
     /*text-align: center;*/
     padding: 10px 0 4px;
@@ -103,6 +121,7 @@ header{
 .imgWrapper {
     padding: 25px;
 }
+
 .projectDescWrapper {
     padding: 25px;
 }
@@ -117,6 +136,7 @@ main {
     display: inline-block;
     width: 100%;
 }
+
 #hero-section span {
     display: block;
 }
@@ -124,6 +144,7 @@ main {
 #work-section {
     background-color: #ffffff;
 }
+
 #work-section h2 {
     text-align: center;
 }
@@ -131,6 +152,7 @@ main {
 #contact-section {
     background-color: #ffffff;
 }
+
 #about-me-section {
     background-color: #ffffff;
 }
@@ -172,6 +194,7 @@ svg {
 .skillsWrapper h3 {
     text-align: center;
 }
+
 .skillsWrapper ul {
     text-align: center;
 }
@@ -179,29 +202,30 @@ svg {
 .skillsWrapper2 h3 {
     text-align: center;
 }
+
 .skillsWrapper2 ul {
     text-align: center;
 }
 
 
-.skillsWrapper > ul {
+.skillsWrapper>ul {
     list-style-type: none;
     padding: 0px;
 }
 
-.skillsWrapper2 > ul {
+.skillsWrapper2>ul {
     list-style-type: none;
     padding: 0px;
 }
 
-nav > ul {
+nav>ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     text-align: right;
 }
 
-nav > ul > li > a {
+nav>ul>li>a {
     padding: 0 15px;
     text-transform: uppercase;
     font-weight: 700;
@@ -212,7 +236,8 @@ nav > ul > li > a {
     display: none;
 }
 
-.navtoggle, .navtoggle.responsive {
+.navtoggle,
+.navtoggle.responsive {
     position: relative;
 }
 
@@ -223,7 +248,8 @@ nav > ul > li > a {
     font-size: 20px;
     padding-right: 0;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
     display: block;
 }
 
@@ -231,8 +257,9 @@ nav > ul > li > a {
 .container {
     padding: 0 15px;
 }
-.row{
-    margin: 25px 0; 
+
+.row {
+    margin: 25px 0;
 }
 
 .row::after {
@@ -253,37 +280,56 @@ nav > ul > li > a {
 
 /*CSS Animation*/
 @keyframes color-change {
-    from {fill: #edc655;}
-    to {fill: #f76414;}
+    from {
+        fill: #edc655;
+    }
+
+    to {
+        fill: #f76414;
+    }
 }
+
 .sun {
     animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
-    from {transform: translate(0,50px);}
-    to {transform: translate(200px,50px);}
+    from {
+        transform: translate(0, 50px);
+    }
+
+    to {
+        transform: translate(200px, 50px);
+    }
 }
+
 .cloud-front {
     animation: 30s cloud-move infinite alternate linear;
 }
+
 @keyframes cloud-move-reverse {
-    from {transform: translate(446px,48px);}
-    to {transform: translate(100px, 48px);}
+    from {
+        transform: translate(446px, 48px);
+    }
+
+    to {
+        transform: translate(100px, 48px);
+    }
 }
+
 .cloud-back {
     animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 
 .social-links {
-	display: flex;
-	flex-direction: row;
-	align-items: left;
-	justify-content: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
 }
 
-.social-links > a {
-	margin: 25px;
+.social-links>a {
+    margin: 25px;
 }
 
 /* ==============================
@@ -295,6 +341,11 @@ Medium devices (640px and larger)
         padding: 10px 0 4px;
     }
 
+    h1 {
+        font-size: 2.75em;
+        font-weight: 700;
+    }
+
     main {
         padding-top: 56px;
     }
@@ -305,17 +356,18 @@ Medium devices (640px and larger)
         margin-top: 4px;
     }
 
-    nav > ul {
+    nav>ul {
         margin: 1em 0;
     }
 
-    nav > ul > li {
-    display: inline-block;
+    nav>ul>li {
+        display: inline-block;
     }
 
     .navtoggle li:not(:last-child) {
         display: inline-block;
     }
+
     .navtoggle li:last-child {
         display: none;
     }
@@ -323,6 +375,7 @@ Medium devices (640px and larger)
     .col-md-6 {
         width: 50%;
     }
+
     [class*="col-md-6"] {
         float: left;
         padding-right: 10px;
@@ -334,6 +387,7 @@ Medium devices (640px and larger)
         font-weight: 700;
     }
 }
+
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
@@ -341,12 +395,18 @@ Large devices (1024px or larger)
     [class*="col-"] {
         float: left;
     }
+
+    h1 {
+        font-size: 2.75em;
+        font-weight: 700;
+    }
+
     .container {
         max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
     }
-    
+
     header {
         text-align: unset;
         padding: 10px 0 4px;
@@ -355,19 +415,22 @@ Large devices (1024px or larger)
     main {
         padding-top: 56px;
     }
-    
+
     nav {
         width: auto;
         float: right;
         margin-top: 4px;
     }
+
     .col-lg-7 {
         width: 50%;
     }
+
     .col-lg-5 {
         width: 50%;
     }
 }
+
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
@@ -375,5 +438,9 @@ X-large devices (1440px or larger)
     [class*="col-"] {
         float: left;
     }
-}
 
+    h1 {
+        font-size: 2.75em;
+        font-weight: 700;
+    }
+}
